# ktp-text-ui

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KDEChatHandler.client  LICENSE  README  chatconnection.cpp  chatconnection.h  chatview.cpp  chatwindow.cpp  chatwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.freedesktop.Telepathy.Client.KDEChatHandler.service.in  realclienthandler.cpp  realclienthandler.h  telepathychatinfo.cpp  telepathychatinfo.h  telepathychatmessageinfo.cpp  telepathychatmessageinfo.h  version.h.in
adiumxtra-protocol-handler/: CMakeLists.txt  Messages.sh  adiumxtra-protocol-handler.cpp  adiumxtra-protocol-handler.h  adiumxtra-protocol-handler.notifyrc  adiumxtra.protocol  adiumxtra.protocol.in  adiumxtraprotocolhandler.cpp  adiumxtraprotocolhandler.h  bundle-installer.cpp  bundle-installer.h  bundleinstaller.cpp  bundleinstaller.h  chat-style-installer.cpp  chat-style-installer.h  chatstyleinstaller.cpp  chatstyleinstaller.h  emoticon-set-installer.cpp  emoticon-set-installer.h  emoticonsetinstaller.cpp  emoticonsetinstaller.h  main.cpp
app/: .swp.mainwindow.cpp  CMakeLists.txt  KDEChatHandler.client  KTp.TextUi.client  Messages.sh  chat-tab.cpp  chat-tab.h  chat-window.cpp  chat-window.h  chat-window.rc  chattab.cpp  chattab.h  chatwindow.cpp  chatwindow.h  chatwindow.rc  contact-delegate.cpp  contact-delegate.h  defines.h  emoticon-text-edit-action.cpp  emoticon-text-edit-action.h  emoticon-text-edit-selector.cpp  emoticon-text-edit-selector.h  invite-contact-dialog.cpp  invite-contact-dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  org.freedesktop.Telepathy.Client.KDE.TextUi.service.in  org.freedesktop.Telepathy.Client.KDEChatHandler.service.in  org.freedesktop.Telepathy.Client.KTp.TextUi.service.in  telepathy-chat-ui.cpp  telepathy-chat-ui.h  telepathy-kde-text-ui.notifyrc  telepathychatui.cpp  telepathychatui.h
config/: CMakeLists.txt  Messages.sh  README  appearance-config-tab.cpp  appearance-config-tab.h  appearance-config.cpp  appearance-config.h  appearance-config.ui  behavior-config.cpp  behavior-config.h  behavior-config.ui  chatwindowconfig.ui  kcm_ktp_chat_appearance.desktop  kcm_ktp_chat_behavior.desktop  kcm_ktp_chat_messages.desktop  kcm_ktp_chat_otr.desktop  kcm_telepathy_chat_appearance_config.desktop  kcm_telepathy_chat_behavior_config.desktop  kcm_telepathy_chat_config.desktop  ktp_otr.kcfg  ktp_otr.kcfgc  main-window.cpp  main-window.h  main.cpp  mainwindow.cpp  mainwindow.h  messages-config.cpp  messages-config.h  otr-config.cpp  otr-config.h  otr-config.ui
config/appearance/: CMakeLists.txt  Messages.sh  appearance-config-tab.cpp  appearance-config.h  kcm_ktp_chat_appearance.desktop
config/behavior/: CMakeLists.txt  Messages.sh  behavior-config.cpp  behavior-config.h  behavior-config.ui  kcm_ktp_chat_behavior.desktop
config/messages/: CMakeLists.txt  Messages.sh  kcm_ktp_chat_messages.desktop  messages-config.cpp  messages-config.h
config/otr/: CMakeLists.txt  Messages.sh  kcm_ktp_chat_otr.desktop  otr-config.cpp
data/: CMakeLists.txt  (+3 more)
filters/: CMakeLists.txt  Messages.sh
filters/bugzilla/: CMakeLists.txt  bugzilla-filter.cpp  bugzilla-filter.h  ktptextui_message_filter_bugzilla.desktop  ktptextui_message_filter_bugzilla.desktop.cmake  showBugzillaInfo.js
filters/embed.ly/: CMakeLists.txt  embedly-filter.cpp  embedly-filter.h  ktptextui_message_filter_embedly.desktop.cmake  showEmbedlyInfo.js
filters/emoticons/: CMakeLists.txt  emoticon-config.cpp  emoticon-config.h  emoticon-config.ui  emoticon-filter.cpp  emoticon-filter.h  kcm_ktptextui_message_filter_emoticons.desktop  ktptextui_message_filter_emoticons.desktop  ktptextui_message_filter_emoticons.desktop.cmake
filters/escape/: CMakeLists.txt  escape-filter.cpp  escape-filter.h  (+1 more)
image-sharer/: CMakeLists.txt  abstractsharer.cpp  abstractsharer.h  imagebinsharer.cpp  imagebinsharer.h  imagesharer_export.h  imgursharer.cpp  imgursharer.h  mpform.cpp  mpform.h  shareprovider.cpp  shareprovider.h  simplestimagehostingsharer.cpp  simplestimagehostingsharer.h
lib/: AdiumThemeContentInfo  AdiumThemeHeaderInfo  AdiumThemeMessageInfo  AdiumThemeStatusInfo  AdiumThemeView  CMakeLists.txt  ChatStylePlistFileReader  ChatWidget  ChatWindowStyle  ChatWindowStyleManager  Messages.sh  abstract-message-filter.cpp  abstract-message-filter.h  adium-theme-content-info.cpp  adium-theme-content-info.h  adium-theme-header-info.cpp  adium-theme-header-info.h  adium-theme-message-info.cpp  adium-theme-message-info.h  adium-theme-status-info.cpp  adium-theme-status-info.h  adium-theme-view.cpp  adium-theme-view.h  adiumthemecontentinfo.cpp  adiumthemecontentinfo.h  adiumthemeheaderinfo.cpp  adiumthemeheaderinfo.h  adiumthememessageinfo.cpp  adiumthememessageinfo.h  adiumthemestatusinfo.cpp  adiumthemestatusinfo.h  adiumthemeview.cpp  adiumthemeview.h  authenticationwizard.cpp  authenticationwizard.h  backslash-filter.cpp  channel-adapter.cpp  channel-adapter.h  channel-contact-list.cpp  channel-contact-list.h  (+104 more)
logviewer/: CMakeLists.txt  Messages.sh  conversation-date-picker.cpp  conversation-date-picker.h  dates-model.cpp  dates-model.h  dates-view-delegate.cpp  dates-view-delegate.h  debug.h  entity-filter-model.cpp  entity-filter-model.h  entity-model-item.cpp  entity-model-item.h  entity-model.cpp  entity-model.h  entity-proxy-model.cpp  entity-proxy-model.h  entity-view-delegate.cpp  entity-view-delegate.h  entity-view.cpp  entity-view.h  ktp-log-viewer.desktop  log-message-view.cpp  log-message-view.h  log-viewer.cpp  log-viewer.h  log-viewer.rc  log-viewer.ui  logs-import-dialog.cpp  logs-import-dialog.h  main.cpp  message-view.cpp  message-view.h  org.kde.ktplogviewer.desktop  person-entity-merge-model.cpp  person-entity-merge-model.h  persons-filter-model.cpp  persons-filter-model.h
part/: CMakeLists.txt  KTpTextChatPart.cpp  KTpTextChatPart.desktop  KTpTextChatPart.h  chatTabWidget.cpp  chatTabWidget.h  chatTabWidget.rc
tests/: CMakeLists.txt  message-processor-basic-tests.cpp  message-processor-basic-tests.h  sync-processor.cpp  sync-processor.h
(+598 files in other folders)
